Fix leaderboard spacing issues

--- a/Picobytes/frontend/src/pages/leaderboard/leaderboard.css
+++ b/Picobytes/frontend/src/pages/leaderboard/leaderboard.css
@@ -35,8 +35,8 @@
 
 #ld-all-content {
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: column;*/
     height: 100%;
 
     position: relative;
@@ -83,10 +83,11 @@
 }
 
 #ld-all-grid-item {
-    padding: 20px;
+    
     text-align: left;
     color: var(--grid-button-text-color);
     font-size: 25px;
+    padding: 20px;
 }
 
 #ld-all-rank-icon {
